--- a/frontend/src/pages/admin/AdminPage.css
+++ b/frontend/src/pages/admin/AdminPage.css
@@ -6,16 +6,20 @@
 
     max-height: 100vh;
     max-width: 100vw;
+    height: 100%;
+    width: 100%;
 }
 
 .admin-page-table-container
 {
     width: 50%;
-    height: 100%;
 }
 
 .admin-page-panel-container
 {
     width: 50%;
     height: 100%;
+
+    display: flex;
+    flex-direction: column;
 }
